Fixed Header Alignment

--- a/src/css/TopMiners.css
+++ b/src/css/TopMiners.css
@@ -3,7 +3,7 @@ h2 {
     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
-.MuiTableCell-root-37.MuiTableCell-head-38.MuiTableCell-numeric-41 {
+#hashrate {
     text-align: left;
 }
 
